--- a/gin/Dockerfile
+++ b/gin/Dockerfile
@@ -4,4 +4,6 @@ WORKDIR /home/yeoman/gin
 RUN git checkout backyard
 RUN bower install
 RUN npm install
+RUN rm -rf client/components/startbootstrap-creative
+RUN git clone https://github.com/ironsummitmedia/startbootstrap-creative client/components/startbootstrap-creative
 CMD grunt serve:dist --force
