--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,6 +7,7 @@ RUN mkdir /etc/nginx/sites-enabled
 ADD default.conf /etc/nginx/conf.d/
 ADD nginx.conf /etc/nginx/
 ADD gin.conf /etc/nginx/sites-enabled/
+ADD blgse.conf /etc/nginx/sites-enabled/
 #ADD tonic.conf /etc/nginx/sites-enabled/
 
 CMD ["nginx", "-g", "daemon off;"]
