--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,6 +8,7 @@ ADD default.conf /etc/nginx/conf.d/
 ADD nginx.conf /etc/nginx/
 ADD gin.conf /etc/nginx/sites-enabled/
 ADD blgse.conf /etc/nginx/sites-enabled/
+ADD ecic.conf /etc/nginx/sites-enabled/
 #ADD tonic.conf /etc/nginx/sites-enabled/
 
 CMD ["nginx", "-g", "daemon off;"]
